--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -2,6 +2,9 @@ doctrine:
     dbal:
         override_url: true
         url: '%env(resolve:DATABASE_URL)%'
+        types:
+            difficulty: App\Entity\Type\DifficultyType
+            rate: App\Entity\Type\RateType
 
         # IMPORTANT: You MUST configure your server version,
         # either here or in the DATABASE_URL env var (see .env file)
