--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "devDependencies": {
         "@symfony/stimulus-bridge": "^2.0.0",
         "@symfony/webpack-encore": "^1.0.0",
+        "@ttskch/select2-bootstrap4-theme": "^1.5.2",
         "core-js": "^3.0.0",
         "regenerator-runtime": "^0.13.2",
         "sass": "^1.32.8",
@@ -9,7 +10,7 @@
         "stimulus": "^2.0.0",
         "webpack-notifier": "^1.6.0"
     },
-    "license": "UNLICENSED",
+    "license": "MIT",
     "private": true,
     "scripts": {
         "dev-server": "encore dev-server",
@@ -21,6 +22,7 @@
         "@fortawesome/fontawesome-free": "^5.15.3",
         "bootstrap": "^4.6.0",
         "jquery": "^3.6.0",
-        "popper.js": "^1.16.1"
+        "popper.js": "^1.16.1",
+        "select2": "^4.1.0-rc.0"
     }
 }
