Recipe : Form Collection steps

--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -5,3 +5,4 @@ twig:
     exception_controller: null
     form_themes: 
         - 'bootstrap_4_horizontal_layout.html.twig'
+        - '_form/custom_types.html.twig'
