--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -5,6 +5,7 @@ doctrine:
         types:
             difficulty: App\Entity\Type\DifficultyType
             rate: App\Entity\Type\RateType
+            unity: App\Entity\Type\UnityType
 
         # IMPORTANT: You MUST configure your server version,
         # either here or in the DATABASE_URL env var (see .env file)
