--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.15.3",
+        "bloodhound-js": "^1.2.3",
         "bootstrap": "^4.6.0",
         "jquery": "^3.6.0",
         "popper.js": "^1.16.1",
-        "select2": "^4.1.0-rc.0"
+        "select2": "^4.1.0-rc.0",
+        "typeahead.js": "^0.11.1",
+        "typeahead.js-bootstrap4-css": "^1.0.0"
     }
 }
