--- a/.env
+++ b/.env
@@ -30,5 +30,6 @@ APP_SECRET=acb1c1ed8582f6486504542d8b27ec17
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
-DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
+# DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
+DATABASE_URL=sqlite:///%kernel.project_dir%/database.sqlite
 ###< doctrine/doctrine-bundle ###
