Migration en Symfony 5.4

--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,12 @@
 /vendor/
 ###< symfony/framework-bundle ###
 
+###> phpunit/phpunit ###
+/phpunit.xml
+.phpunit.result.cache
+###< phpunit/phpunit ###
+
 ###> symfony/phpunit-bridge ###
-.phpunit
 .phpunit.result.cache
 /phpunit.xml
 ###< symfony/phpunit-bridge ###
@@ -25,3 +29,10 @@ yarn-error.log
 ###> liip/imagine-bundle ###
 /public/datas/cache/
 ###< liip/imagine-bundle ###
+
+/public/images/home*
+#/public/datas/**
+#!/public/datas/.gitkeep
+#!/public/datas/categories/.gitkeep
+#!/public/datas/recipes/.gitkeep
+/DEVELOP*.md
