--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,11 +1,14 @@
 twig:
     default_path: '%kernel.project_dir%/templates'
-    debug: '%kernel.debug%'
-    strict_variables: '%kernel.debug%'
-    exception_controller: null
+    #debug: '%kernel.debug%'
+    #exception_controller: null
     form_themes: 
         - 'bootstrap_4_horizontal_layout.html.twig'
         - '_form/custom_types.html.twig'
     globals:
         uri_recipe: '%recipe_path%'
         uri_category: '%category_path%'
+
+when@test:
+    twig:
+        strict_variables: true
