--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -3,8 +3,6 @@ security:
     # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
     password_hashers:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
-
-    encoders:
         App\Entity\User:
             algorithm: auto
 
@@ -20,11 +18,15 @@ security:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
-            #anonymous: lazy
+            lazy: true
             provider: app_user_provider
-            guard:
-                authenticators:
-                    - App\Security\LoginFormAuthenticator
+
+            form_login:
+                # "login" is the name of the route created previously
+                login_path: app_login
+                check_path: app_login
+                enable_csrf: true
+
             logout:
                 path: app_logout
                 # where to redirect after logout
