--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,10 @@ npm-debug.log
 yarn-error.log
 ###< symfony/webpack-encore-bundle ###
 
+###> php-cs-fixer ###
+/.php-cs-fixer.cache
+###< php-cs-fixer ###
+
 ###> liip/imagine-bundle ###
 /public/datas/cache/
 ###< liip/imagine-bundle ###
