--- a/composer.json
+++ b/composer.json
@@ -95,7 +95,9 @@
         ],
         "post-update-cmd": [
             "@auto-scripts"
-        ]
+        ],
+        "codestyle": "php-cs-fixer fix --dry-run --verbose --diff",
+        "codestyle-fix": "php-cs-fixer fix"
     },
     "conflict": {
         "symfony/symfony": "*"
