--- a/composer.json
+++ b/composer.json
@@ -100,6 +100,7 @@
             "phpmd src ansi ruleset.xml",
             "phpmd tests ansi ruleset.xml"
         ],
+        "phpstan": "phpstan analyse src --level=7 --configuration=phpstan.neon",
         "codestyle": "php-cs-fixer fix --dry-run --verbose --diff",
         "codestyle-fix": "php-cs-fixer fix"
     },
