--- a/composer.json
+++ b/composer.json
@@ -48,7 +48,7 @@
         "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
-	"doctrine/doctrine-fixtures-bundle": "^3.4",
+        "doctrine/doctrine-fixtures-bundle": "^3.4",
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "5.4.*",
         "symfony/css-selector": "5.4.*",
@@ -96,6 +96,7 @@
         "post-update-cmd": [
             "@auto-scripts"
         ],
+        "test": "phpunit --debug",
         "phpmd": [
             "phpmd src ansi ruleset.xml",
             "phpmd tests ansi ruleset.xml"
