--- a/.env
+++ b/.env
@@ -15,8 +15,9 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
+APP_NAME="MyCook"
 APP_ENV=dev
-APP_SECRET=acb1c1ed8582f6486504542d8b27ec17
+#APP_SECRET=acb1c1ed8582f6486504542d8b27ec17
 ###< symfony/framework-bundle ###
 
 ###> symfony/webapp-pack ###
