Consolidation en PHP 8.2

--- a/.gitignore
+++ b/.gitignore
@@ -25,9 +25,10 @@ npm-debug.log
 yarn-error.log
 ###< symfony/webpack-encore-bundle ###
 
-###> php-cs-fixer ###
+###> friendsofphp/php-cs-fixer ###
+/.php-cs-fixer.php
 /.php-cs-fixer.cache
-###< php-cs-fixer ###
+###< friendsofphp/php-cs-fixer ###
 
 ###> liip/imagine-bundle ###
 /public/datas/cache/
