--- a/composer.json
+++ b/composer.json
@@ -50,7 +50,10 @@
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.4",
+        "friendsofphp/php-cs-fixer": "^3.64",
+        "phpmd/phpmd": "^2.15",
         "phpunit/phpunit": "^9.5",
+        "rector/rector": "^1.2",
         "symfony/browser-kit": "5.4.*",
         "symfony/css-selector": "5.4.*",
         "symfony/debug-bundle": "5.4.*",
