--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
     "devDependencies": {
         "@hotwired/stimulus": "^3.0.0",
         "@symfony/stimulus-bridge": "^3.0.0",
+        "@symfony/ux-autocomplete": "file:vendor/symfony/ux-autocomplete/assets",
+        "@symfony/ux-chartjs": "file:vendor/symfony/ux-chartjs/assets",
         "@symfony/webpack-encore": "^2.0.0",
+        "chart.js": "^3.4.1 || ^4.0",
         "core-js": "^3.0.0",
         "regenerator-runtime": "^0.13.2",
+        "tom-select": "^2.2.2",
         "webpack-notifier": "^1.6.0"
     },
     "license": "UNLICENSED",
