--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,7 +1,5 @@
 twig:
-    default_path: '%kernel.project_dir%/templates'
-    #debug: '%kernel.debug%'
-    #exception_controller: null
+    file_name_pattern: '*.twig'
     form_themes: 
         - '@OlixBackOffice/Twig/form-theme-horizontal-layout.html.twig'
     globals:
