--- a/.env
+++ b/.env
@@ -42,5 +42,5 @@ DATABASE_URL=sqlite:///%kernel.project_dir%/database.sqlite
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=null://null
+MAILER_DSN=null://null
 ###< symfony/mailer ###
