Recipe update phpunit/phpunit

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -41,4 +41,7 @@
     <listeners>
         <listener class="Symfony\Bridge\PhpUnit\SymfonyTestsListener" />
     </listeners>
+
+    <extensions>
+    </extensions>
 </phpunit>
