--- a/composer.json
+++ b/composer.json
@@ -109,7 +109,11 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "6.4.*"
+            "require": "6.4.*",
+            "endpoint": [
+                "https://api.github.com/repos/sabinus52/symfony-recipes/contents/index.json",
+                "flex://defaults"
+            ]
         }
     }
 }
