--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -2,9 +2,9 @@ doctrine:
     dbal:
         url: '%env(resolve:DATABASE_URL)%'
         types:
-            difficulty: App\Entity\Type\DifficultyType
-            rate: App\Entity\Type\RateType
-            unity: App\Entity\Type\UnityType
+            difficulty: App\Doctrine\Type\DifficultyType
+            rate: App\Doctrine\Type\RateType
+            unity: App\Doctrine\Type\UnityType
 
         # IMPORTANT: You MUST configure your server version,
         # either here or in the DATABASE_URL env var (see .env file)
