--- a/config/services.yaml
+++ b/config/services.yaml
@@ -25,6 +25,8 @@ services:
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
 
+    Doctrine\DBAL\Driver\AbstractSQLiteDriver\Middleware\EnableForeignKeys: ~
+
     App\Service\RecipeUploader:
         arguments:
             $directory: '%recipe_path%'
