--- a/composer.json
+++ b/composer.json
@@ -46,10 +46,15 @@
         "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
+        "dama/doctrine-test-bundle": "^8.2",
+        "dbrekelmans/bdi": "^1.4",
         "doctrine/doctrine-fixtures-bundle": "^3.4",
-        "friendsofphp/php-cs-fixer": "^3.64",
+        "friendsofphp/php-cs-fixer": "^3.66",
         "phpmd/phpmd": "^2.15",
+        "phpmetrics/phpmetrics": "*",
+        "phpstan/phpstan": "^1.12",
         "phpunit/phpunit": "^9.5",
+        "psalm/plugin-symfony": "^5.2",
         "rector/rector": "^1.2",
         "symfony/browser-kit": "6.4.*",
         "symfony/css-selector": "6.4.*",
@@ -57,7 +62,8 @@
         "symfony/maker-bundle": "^1.0",
         "symfony/phpunit-bridge": "^6.1",
         "symfony/stopwatch": "6.4.*",
-        "symfony/web-profiler-bundle": "6.4.*"
+        "symfony/web-profiler-bundle": "6.4.*",
+        "weirdan/doctrine-psalm-plugin": "*"
     },
     "config": {
         "allow-plugins": {
