--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,8 @@
         "olix/backoffice-bundle": "1.*",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.6",
+        "phpstan/phpstan-doctrine": "*",
+        "phpstan/phpstan-symfony": "*",
         "symfony/apache-pack": "^1.0",
         "symfony/asset": "6.4.*",
         "symfony/asset-mapper": "6.4.*",
@@ -101,7 +103,9 @@
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
             "assets:install %PUBLIC_DIR%": "symfony-cmd",
-            "importmap:install": "symfony-cmd"
+            "importmap:install": "symfony-cmd",
+            "asset-map:compile": "symfony-cmd",
+            "sass:build": "symfony-cmd"
         },
         "post-install-cmd": [
             "@auto-scripts"
