--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "minimum-stability": "stable",
     "prefer-stable": true,
     "require": {
-        "php": ">=8.1",
+        "php": ">=8.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
         "doctrine/doctrine-bundle": "^2.7",
@@ -16,6 +16,7 @@
         "phpstan/phpdoc-parser": "^1.6",
         "phpstan/phpstan-doctrine": "*",
         "phpstan/phpstan-symfony": "*",
+        "runtime/frankenphp-symfony": "^0.2.0",
         "symfony/apache-pack": "^1.0",
         "symfony/asset": "6.4.*",
         "symfony/asset-mapper": "6.4.*",
@@ -121,6 +122,7 @@
         "symfony": {
             "allow-contrib": false,
             "require": "6.4.*",
+            "docker": true,
             "endpoint": [
                 "https://api.github.com/repos/sabinus52/symfony-recipes/contents/index.json",
                 "flex://defaults"
